--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ imbalanced-learn
 xgboost
 azure-ai-inference
 setuptools
-ydata-profiling 
-streamlit-pandas-profiling
+visions==0.7.5
+ydata-profiling==4.7.0
+streamlit-pandas-profiling==0.1.3
+python==3.10
