--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ scikit-learn
 mysql-connector-python 
 matplotlib 
 seaborn 
-upgrade imbalanced-learn
+imbalanced-learn
 xgboost
 azure-ai-inference
 setuptools
